--- a/users.html
+++ b/users.html
@@ -2,29 +2,21 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body style="display:block; overflow-y:auto;">
-    <div class="safe-area">
-        <div style="padding:20px; background:var(--card); display:flex; justify-content:space-between;">
-            <b style="color: var(--accent);">Pody Friends</b>
-            <span onclick="localStorage.clear(); location.replace('login.html')" style="cursor:pointer; color:#fb7185;">خروج</span>
-        </div>
-        <div id="list"></div>
+    <div style="padding:15px; background:var(--card); display:flex; justify-content:space-between; align-items:center;">
+        <b style="font-size:14px; color:var(--accent);">Pody</b>
+        <span onclick="localStorage.clear(); location.replace('login.html')" style="font-size:12px; color:#fb7185;">خروج</span>
     </div>
+    <div id="list"></div>
     <script src="Firebase.js"></script>
     <script>
         const me = localStorage.getItem("me");
         if(!me) location.replace("login.html");
-
-        // طلب إذن الإشعارات
-        if (Notification.permission !== "granted") {
-            Notification.requestPermission();
-        }
-
         db.ref("users").on("value", snap => {
             let h = "";
             snap.forEach(u => {
