Update index.html with viewport and timeout changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Pody</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,8 +15,8 @@
     <script>
         setTimeout(() => {
             if(localStorage.getItem("me")) window.location.replace("users.html");
-            else window.location.replace("log in.html");
-        }, 4000); 
+            else window.location.replace("login.html");
+        }, 3000); 
     </script>
 </body>
 </html>
