--- a/login.html
+++ b/login.html
@@ -2,14 +2,14 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
-<body>
+<body style="display:flex;">
     <div class="box">
-        <h2 style="color: var(--accent);">Pody Chat</h2>
+        <h3 style="margin:0 0 10px 0; color:var(--accent); font-size:16px;">Pody Chat</h3>
         <input id="u" type="text" placeholder="اسمك">
         <input id="p" type="password" placeholder="كلمة السر">
         <button id="btn">دخول</button>
@@ -17,14 +17,14 @@
     <script src="Firebase.js"></script>
     <script>
         document.getElementById("btn").onclick = () => {
-            const u = document.getElementById("u").value, p = document.getElementById("p").value;
+            const u = document.getElementById("u").value.trim(), p = document.getElementById("p").value;
             if(!u || !p) return;
             db.ref("users/"+u).once("value").then(s => {
                 if(s.exists()){
                     if(s.val().password === p) { localStorage.setItem("me",u); location.replace("users.html"); }
-                    else alert("كلمة السر خطأ");
+                    else alert("خطأ في كلمة السر");
                 } else {
-                    db.ref("users/"+u).set({name:u, password:p, photo: "https://ui-avatars.com/api/?name="+u})
+                    db.ref("users/"+u).set({name:u, password:p, photo: "https://ui-avatars.com/api/?name="+u+"&background=random&color=fff"})
                     .then(() => { localStorage.setItem("me",u); location.replace("users.html"); });
                 }
             });
@@ -32,3 +32,4 @@
     </script>
 </body>
 </html>
+
