Format index.html with consistent indentation

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <div class="splash-container">
-        <div class="splash-text"><span>P</span><span>o</span><span>d</span><span>y</span></div>
+        <div class="splash-text">
+            <span>P</span><span>o</span><span>d</span><span>y</span>
+        </div>
     </div>
     <script>
         setTimeout(() => {
             if(localStorage.getItem("me")) window.location.replace("users.html");
             else window.location.replace("login.html");
-        }, 3000);
+        }, 3000); 
     </script>
 </body>
 </html>
+
 
 
