--- a/users.html
+++ b/users.html
@@ -8,49 +8,23 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body style="display:block; overflow-y:auto;">
-    <div style="padding:12px; background:var(--card); display:flex; justify-content:space-between; align-items:center; position:sticky; top:0; z-index:10;">
-        <b style="font-size:14px; color:var(--accent);">Pody Friends</b>
-        <span onclick="logout()" style="font-size:11px; color:#fb7185; cursor:pointer;">خروج</span>
+    <div style="padding:15px; background:var(--card); display:flex; justify-content:space-between; align-items:center;">
+        <b style="font-size:14px; color:var(--accent);">Pody</b>
+        <span onclick="localStorage.clear(); location.replace('login.html')" style="font-size:12px; color:#fb7185;">خروج</span>
     </div>
     <div id="list"></div>
     <script src="Firebase.js"></script>
     <script>
         const me = localStorage.getItem("me");
         if(!me) location.replace("login.html");
-
-        // نظام التواجد (Online)
-        const statusRef = db.ref('users/' + me + '/online');
-        statusRef.set(true);
-        statusRef.onDisconnect().set(false);
-
-        if (Notification.permission !== "granted") Notification.requestPermission();
-
         db.ref("users").on("value", snap => {
             let h = "";
             snap.forEach(u => {
-                if(u.key !== me) {
-                    const onlineStatus = u.val().online ? '<span class="status-dot"></span><small style="color:#22c55e">متصل</small>' : '<small style="opacity:0.5">أوفلاين</small>';
-                    h += `<div class="user-item" onclick="chat('${u.key}')">
-                            <img src="${u.val().photo}" style="width:32px; border-radius:50%">
-                            <div><b style="font-size:13px">${u.key}</b><br>${onlineStatus}</div>
-                            <div class="dot" id="dot-${u.key}"></div>
-                          </div>`;
-                    monitorMsgs(u.key);
-                }
+                if(u.key !== me) h += `<div class="user-item" onclick="chat('${u.key}')"><img src="${u.val().photo}"><b>${u.key}</b></div>`;
             });
             document.getElementById("list").innerHTML = h;
         });
-
-        function monitorMsgs(user) {
-            const id = [me, user].sort().join("_");
-            db.ref("chats/"+id).limitToLast(1).on("child_added", s => {
-                if(s.val().f === user && document.getElementById(`dot-${user}`)) {
-                    document.getElementById(`dot-${user}`).style.display = "block";
-                }
-            });
-        }
         function chat(u){ localStorage.setItem("to",u); location.href="chat.html"; }
-        function logout(){ statusRef.set(false); localStorage.clear(); location.replace('login.html'); }
     </script>
 </body>
 </html>
