--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Pody</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="splash-container">
-        <div class="splash-text">
-            <span>P</span><span>o</span><span>d</span><span>y</span>
-        </div>
+        <div class="splash-text"><span>P</span><span>o</span><span>d</span><span>y</span></div>
     </div>
     <script>
         setTimeout(() => {
             if(localStorage.getItem("me")) window.location.replace("users.html");
             else window.location.replace("login.html");
-        }, 3000); 
+        }, 3500);
     </script>
 </body>
 </html>
+
 
 
 
