--- a/index.html
+++ b/index.html
@@ -6,35 +6,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="splash-sound" src="welcome.mp3" preload="auto"></audio>
-
+    <audio id="splash-sound" src="welcome.mp3"></audio>
     <div class="splash-container">
-        <div class="splash-text">
-            <span>P</span><span>o</span><span>d</span><span>y</span>
-        </div>
+        <div class="splash-text"><span>P</span><span>o</span><span>d</span><span>y</span></div>
     </div>
-
     <script>
-        // محاولة تشغيل الصوت مع أول حرف
-        window.addEventListener('load', () => {
-            const sound = document.getElementById('splash-sound');
-            
-            // تأخير بسيط ليتماشى مع أول حرف (0.3 ثانية)
-            setTimeout(() => {
-                sound.play().catch(err => {
-                    console.log("المتصفح منع التشغيل التلقائي: يحتاج تفاعل أولاً");
-                });
-            }, 300);
-        });
-
-        // الانتقال للصفحة التالية بعد 3.5 ثانية
+        const snd = document.getElementById('splash-sound');
+        window.addEventListener('load', () => { setTimeout(() => { snd.play().catch(() => {}); }, 300); });
+        window.addEventListener('touchstart', () => { snd.play().catch(() => {}); }, {once:true});
+        
         setTimeout(() => {
             if(localStorage.getItem("me")) window.location.replace("users.html");
             else window.location.replace("login.html");
-        }, 3500);
+        }, 3800);
     </script>
 </body>
 </html>
+
 
 
 
