--- a/chat.html
+++ b/chat.html
@@ -8,6 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
+    <audio id="hit-sound" src="hit.mp3"></audio>
     <div class="chat-container">
         <div style="padding:10px; background:var(--card); display:flex; align-items:center; gap:8px;">
             <button onclick="location.href='users.html'" style="width:auto; padding:4px 8px; font-size:11px;">🔙</button>
@@ -23,6 +24,7 @@
     <script>
         const me = localStorage.getItem("me"), to = localStorage.getItem("to");
         const id = [me, to].sort().join("_");
+        const hit = document.getElementById("hit-sound");
         document.getElementById("target").innerText = to;
 
         db.ref("users/"+to+"/online").on("value", s => {
@@ -31,7 +33,7 @@
 
         db.ref("chats/"+id).on("child_added", s => {
             const m = s.val();
-            const time = new Date(m.ts).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+            const time = m.ts ? new Date(m.ts).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'}) : "";
             const d = document.createElement("div");
             d.className = "m " + (m.f === me ? "me" : "other");
             d.innerHTML = `${m.t} <span class="time">${time}</span>`;
@@ -41,9 +43,14 @@
 
         document.getElementById("send").onclick = () => {
             const t = document.getElementById("in").value.trim();
-            if(t) { db.ref("chats/"+id).push({f:me, t:t, ts: Date.now()}); document.getElementById("in").value=""; }
+            if(t) { 
+                hit.currentTime = 0; hit.play().catch(()=>{});
+                db.ref("chats/"+id).push({f:me, t:t, ts: Date.now()}); 
+                document.getElementById("in").value=""; 
+            }
         };
     </script>
 </body>
 </html>
+
 
